--- a/ovning3.html
+++ b/ovning3.html
@@ -2,16 +2,39 @@
 <meta charset="utf-8"/>
 <html>
 <head>
-<title>Övning 3r</title>
+<title>Övningar</title>
 </head>
 <body>
-<ol>
-	<h1><li>Lista med inlämningar</h1>
-		<li><a href="ovning1.html">Övning 1</a></li>
-		<li><a href="ovning2.html">Övning 2</a></li>
-		<li>Exempel sida1.3</li>
+<h1>Övning 3</h1>
 
-	
-</ol>
+<font size = "3"><p style="text-align: center">Kula damer OS 2016</p></font>
+<table  style="border-spacing: 15px" align="center">
+  <tr>
+    <th>Idrottare</th>
+    <th>Resultat</th> 
+    <th>Placering</th>
+    <th>Land</th>
+  </tr>
+  <tr>
+    <td>Michelle Carter</td>
+    <td>20.7m</td> 
+    <td>1</td>
+    <td>Swe</td>
+  </tr>
+  <tr>
+    <td>Valerie Adams</td>
+    <td>19.4m</td> 
+    <td>1</td>
+    <td>Nor</td>
+  </tr>
+  <tr>
+  <td>Yngwe Hansson</td>
+    <td>10.2m</td> 
+    <td>1</td>
+    <td>Dk</td>
+	</tr>
+
+</table>
+    <a href="index.html">Tillbaka</a>
 </body>
 </html>
