--- a/index.html
+++ b/index.html
@@ -2,38 +2,18 @@
 <meta charset="utf-8"/>
 <html>
 <head>
-<title>Övningar</title>
+<title>Övning 3r</title>
 </head>
 <body>
-<h1>Övning 3</h1>
+<ol>
+	<h1><li>Lista med inlämningar</h1>
+		<li><a href="ovning1.html">Övning 1</a></li>
+		<li><a href="ovning2.html">Övning 2</a></li>
+		<li><a href="ovning3.html">Övning 3</a></li>
 
-<font size = "3"><p style="text-align: center">Kula damer OS 2016</p></font>
-<table  style="border-spacing: 15px" align="center">
-  <tr>
-    <th>Idrottare</th>
-    <th>Resultat</th> 
-    <th>Placering</th>
-    <th>Land</th>
-  </tr>
-  <tr>
-    <td>Michelle Carter</td>
-    <td>20.7m</td> 
-    <td>1</td>
-    <td>Swe</td>
-  </tr>
-  <tr>
-    <td>Valerie Adams</td>
-    <td>19.4m</td> 
-    <td>1</td>
-    <td>Nor</td>
-  </tr>
-  <tr>
-  <td>Yngwe Hansson</td>
-    <td>10.2m</td> 
-    <td>1</td>
-    <td>Dk</td>
-	</tr>
-
-</table>
+	
+</ol>
+    
+<a href="index.html">Tillbaka</a>    
 </body>
 </html>
